--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,5 @@
 .box {
+	display: block;
 	margin: auto;
 	width: 40%;
 	border: 3px solid green;
@@ -51,4 +52,38 @@ span {
 	color: #271F30;
 	margin: 0;
 	padding: 0;
+}
+
+
+.graph_box {
+	position: relative;
+	width: 40%;
+	margin: auto;
+	height: 200px;
+	/*padding: 30px 30px 30px 30px;*/
+}
+.graph {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+
+	display: flex;
+	align-items: flex-end;
+}
+.graph_line {
+	z-index: 10;
+	position: absolute;
+	width: 100%;
+	height: 70%;
+	bottom: 0;
+
+	background-color: pink;
+}
+.graph_column {
+	flex: 1;
+	display: inline-block;
+	/*padding: 10px;*/
+	margin-right: 5px;
+	margin-left: 5px;
+	background-color: red;
 }
