--- a/static/style.css
+++ b/static/style.css
@@ -66,7 +66,6 @@ span {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-
 	display: flex;
 	align-items: flex-end;
 }
@@ -76,7 +75,7 @@ span {
 	width: 100%;
 	height: 70%;
 	bottom: 0;
-
+	opacity: 0.5;
 	background-color: pink;
 }
 .graph_column {
